ProdIND/ProdPrograms/force-app/main/default/objects/Geo_State_Masters__c/Geo_State_Masters__c.object-meta.xml
<CustomObject>
    <label>Geo State Master</label>
    <nameField>
        <label>State Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geo State Masters</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>