ProdIND/ProdPrograms/force-app/main/default/objects/Geo_State_Masters__c/fields/NeSL_State_Code__c.field-meta.xml
<CustomField>
    <fullName>NeSL_State_Code__c</fullName>
    <label>NeSL_State_Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>