ProdIND/ProdPrograms/force-app/main/default/objects/Geo_State_Masters__c/fields/Pincode__c.field-meta.xml
<CustomField>
    <fullName>Pincode__c</fullName>
    <label>Pincode Starting Min</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>