ProdIND/ProdPrograms/force-app/main/default/objects/Geo_State_Masters__c/fields/Pincode_Starting_Max__c.field-meta.xml
<CustomField>
    <fullName>Pincode_Starting_Max__c</fullName>
    <label>Pincode Starting Max</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>