ProdIND/ProdPrograms/force-app/main/default/objects/Geo_State_Masters__c/fields/State_Code__c.field-meta.xml
<CustomField>
    <fullName>State_Code__c</fullName>
    <description>Masters for Geo State Table</description>
    <externalId>true</externalId>
    <label>State_Code</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>