ProdIND/ProdPrograms/force-app/main/default/objects/Geo_State_Masters__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>State_Code__c</columns>
    <columns>NAME</columns>
    <columns>NeSL_State_Code__c</columns>
    <columns>Pincode__c</columns>
    <columns>Pincode_Starting_Max__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>KERALA</value>
    </filters>
    <label>All</label>
</ListView>